# elasticsearch-cpp

./: .gitignore  CMakeLists.txt  Makefile  packages.cmake
include/: CMakeLists.txt
include/elasticsearch/: CMakeLists.txt  bulk.h  elasticsearch  elasticsearch.h  except.h
include/elasticsearch/api/: api.h  document.h  index.h
include/elasticsearch/builder/: CMakeLists.txt  about.h  builder.h  bulk.h  common.h  create_doc.h  create_index.h  delete_by_query.h  delete_doc.h  delete_index.h  doc_exists.h  get_doc_source.h  index_exists.h  refresh.h  search.h  update_doc.h
include/elasticsearch/type/: about_type.h  document_type.h  result_type.h  shard_type.h  version_type.h
include/internal/: elastic_env.h  suite.h
include/internal/suite/: elastic_test.h  index_test.h
src/: CMakeLists.txt
src/elasticsearch-cpp.test/: elastic_env.test.cpp  main.test.cpp
src/elasticsearch.test/: CMakeLists.txt  elastic_env.test.cpp  main.test.cpp
src/elasticsearch.test/suite/: CMakeLists.txt  elastic.test.cpp
src/libelasticsearch/: CMakeLists.txt  bulk.cpp  elasticsearch.cpp  elasticsearch.test.cpp  except.cpp
src/libelasticsearch-cpp/: about.test.cpp  document.cpp  document.test.cpp  elasticsearch.cpp  elasticsearch.test.cpp  elasticsearch.test.h  except.cpp  index.cpp  index.test.cpp  search.cpp
src/libelasticsearch-cpp/api/: api.cpp  api.h  create_doc.cpp  create_index.cpp  delete_doc.cpp  delete_index.cpp  index.test.cpp  index_exists.cpp  search.cpp
src/libelasticsearch-cpp/json/: json.h
src/libelasticsearch-cpp/type/: about_type.h  document_type.h  relation.cpp  result_type.h  shard_type.h  type.h  (+1 more)
(+22 files in other folders)
